<resources>
    <string name="app_name">MyNews</string>
    <string name="top_stories">Top Stories</string>
    <string name="most_popular">Most Popular</string>
    <string name="business">Business</string>
    <string name="configuration">Configuration</string>
    <string name="search">Search</string>
    <string name="parameters">Parameters</string>
    <string name="title">Title</string>
    <string name="summary">Summary</string>
    <string name="notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="search_query_term">Search query term</string>
    <string name="articles">Articles</string>
    <string name="entrepreneurs">Entrepreneurs</string>
    <string name="politics">Politics</string>
    <string name="sports">Sports</string>
    <string name="travel">Travel</string>
    <string name="enable_notifications_once_per_day">Enable notifications (once per day)</string>
    <string name="all_about">This app will help you to show the news from api of the New York Times. Enjoy !</string>
    <string name="help_text">This application have been done and tested for API 19 and more. However, if something wrong happens you can mail the author to : laurent.marro@outlook.fr</string>
    <string name="begin_date">Begin Date</string>
    <string name="end_date">End Date</string>
    <string name="date">01/01/2019</string>
    <string name="articles_image">articles\'image</string>
    <string name="arts">Arts</string>
    <string name="notification_text">"new article(s) is (are) on line"</string>
    <string name="information_no_notification">You need to ask something, to click at least a box and to switch on the notification button</string>
    <string name="query_need_something">You have to ask something for your query</string>
    <string name="sectionandsubsection">sectionandsubsection</string>
    <string name="do_you_want_to_update">Do you want to update your choices ?</string>
    <string name="notifications_off">Notifications Switch is now OFF !</string>
    <string name="yes">YES</string>
    <string name="warning">Warning</string>
    <string name="no">NO</string>
    <string name="new_articles">New Article(s)</string>
    <string name="atleast_two_characters">At least two characters !</string>
    <string name="begindate">20190101</string>
    <string name="doyouwanttobenotified">Do you want to be notified of new article(s) using this search ?</string>
    <string name="notificationsupdated">Notifications_updated</string>
    <string name="endatemustbeafterorsame">End Date must be after or the same than Begin Date</string>
    <string name="informationnosearch">You need to ask something and to click at least a box to start the search</string>
    <string name="present">We can\'t read in the future ! We still in the present</string>
    <string name="sorry_search">Sorry, we don\'t have any article for your search</string>
    <string name="ok">OK</string>
    <string name="errornotification">There is an error in the notifications screen. Click OK to go back</string>
    <string name="nonotification">Notifications are not functional</string>
    <string name="notificationareok">Notifications are functional</string>
    <string name="searchresult_s">SearchResult(s)</string>
</resources>