<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".Views.Notifications">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/arts_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/arts" />

        <CheckBox
            android:id="@+id/arts_checkBox2"
            android:layout_width="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/business" />

        <CheckBox
            android:id="@+id/arts_checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/entrepreneurs" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/colorPrimary"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/linearLayout1"
        tools:ignore="MissingConstraints">

        <CheckBox
            android:id="@+id/arts_checkBox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/politics" />

        <CheckBox
            android:id="@+id/arts_checkBox5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/sports" />

        <CheckBox
            android:id="@+id/arts_checkBox6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/travel" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>