<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/articleimage"
        android:contentDescription="@string/articles_image"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:srcCompat="@mipmap/ic_launcher"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/sectionandsubsection"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="80dp"
        android:contentDescription="@string/sectionandsubsection"
        android:text="@string/sectionandsubsection"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/sectionandsubsection"
        android:text="@string/date"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="80dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/articles"
        android:ellipsize="end"
        android:lines="2"
        android:text="@string/summary"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#777"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sectionandsubsection" />

</android.support.constraint.ConstraintLayout>